# FloppyWeb

./: .eslintrc.json  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  Workspace.toml  docker-compose.yml  go.mod  jest.config.js  nginx.conf  package.json  requirements.txt  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml
AI/: FloppyAssistant.cs
AI/Automation/: TaskAutomator.cs
Controls/: BrowserControl.cs
Controls/TabControl/: BrowserTab.cs
Downloads/: SmartDownloadManager.cs
Extensions/: IFloppyWebExtension.cs
Features/VoiceControl/: voice_commander.js
FloppyWeb/: Program.cs
FloppyWeb/AI/: ContextManager.cs  WebPageAnalyzer.cs
FloppyWeb/Analysis/: realtime_analyzer.rs
FloppyWeb/Cache/: advanced_cache.go
FloppyWeb/Controls/: AssistantPanel.cs  NavigationBar.cs
FloppyWeb/Core/: hardware_accel.c  memory_manager.c  system_hooks.c
FloppyWeb/Database/: schema.sql
FloppyWeb/Downloads/: DownloadManager.cs
FloppyWeb/Engine/: renderer.rs
FloppyWeb/Error/: FriendlyErrorHandler.cs
FloppyWeb/Forms/: MainWindow.cs
FloppyWeb/Media/: MediaManager.ts  media_processor.rs
FloppyWeb/Network/: NetworkMonitor.ts  NetworkSpeed.cs  RequestCache.cs
FloppyWeb/Performance/: resource_optimizer.go
FloppyWeb/Search/: search_engine.py
FloppyWeb/Security/: ContentSecurityPolicy.cs  PhishingDetector.cs  PrivacyManager.cs  SandboxManager.cs  SecurityManager.cs  ai_security_analyzer.py  content_scanner.rs  network_scanner.go  password_vault.rs  process_isolator.rs
FloppyWeb/Services/: BrowserHistoryManager.cs  SettingsManager.cs
FloppyWeb/Settings/: PersonalizedSettings.cs
FloppyWeb/UI/: LoadingAnimation.ts
Network/: NetworkManager.cs  RequestHandler.cs  cache_manager.go  cache_service.go
Performance/: ResourceOptimizer.cs
Scripts/: extension_handler.py  extension_manager.py  webpage_handler.js
Services/: BookmarkManager.cs  DownloadManager.cs
Sync/: DeviceSyncManager.cs
Theme/: ThemeColors.cs
public/: index.html
scripts/: build-wasm.sh  build.sh  deploy.sh  start.sh
src/: App.tsx  index.tsx
(+27 files in other folders)
