[package]
name = "floppy-web"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
image = "0.24"
chrono = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
mockall = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 